--- a/.github/workflows/ci-master-pr.yml
+++ b/.github/workflows/ci-master-pr.yml
@@ -9,12 +9,12 @@ on:
     - master
 
 jobs:
-  build-v1-21-0-beta-0-alpine-3-8:
+  build-v1-21-0-alpine-3-8:
     runs-on: ubuntu-18.04
     env:
-      VARIANT_TAG: v1.21.0-beta.0-alpine-3.8
-      # VARIANT_TAG_WITH_REF: v1.21.0-beta.0-alpine-3.8-${GITHUB_REF}
-      VARIANT_BUILD_DIR: variants/v1.21.0-beta.0-alpine-3.8
+      VARIANT_TAG: v1.21.0-alpine-3.8
+      # VARIANT_TAG_WITH_REF: v1.21.0-alpine-3.8-${GITHUB_REF}
+      VARIANT_BUILD_DIR: variants/v1.21.0-alpine-3.8
     steps:
     - uses: actions/checkout@v1
     - name: Display system info (linux)
@@ -60,12 +60,12 @@ jobs:
     - name: Clean-up
       run: docker logout
       if: always()
-  build-v1-21-0-beta-0-envsubst-alpine-3-8:
+  build-v1-21-0-envsubst-alpine-3-8:
     runs-on: ubuntu-18.04
     env:
-      VARIANT_TAG: v1.21.0-beta.0-envsubst-alpine-3.8
-      # VARIANT_TAG_WITH_REF: v1.21.0-beta.0-envsubst-alpine-3.8-${GITHUB_REF}
-      VARIANT_BUILD_DIR: variants/v1.21.0-beta.0-envsubst-alpine-3.8
+      VARIANT_TAG: v1.21.0-envsubst-alpine-3.8
+      # VARIANT_TAG_WITH_REF: v1.21.0-envsubst-alpine-3.8-${GITHUB_REF}
+      VARIANT_BUILD_DIR: variants/v1.21.0-envsubst-alpine-3.8
     steps:
     - uses: actions/checkout@v1
     - name: Display system info (linux)
@@ -111,12 +111,12 @@ jobs:
     - name: Clean-up
       run: docker logout
       if: always()
-  build-v1-21-0-beta-0-git-alpine-3-8:
+  build-v1-21-0-git-alpine-3-8:
     runs-on: ubuntu-18.04
     env:
-      VARIANT_TAG: v1.21.0-beta.0-git-alpine-3.8
-      # VARIANT_TAG_WITH_REF: v1.21.0-beta.0-git-alpine-3.8-${GITHUB_REF}
-      VARIANT_BUILD_DIR: variants/v1.21.0-beta.0-git-alpine-3.8
+      VARIANT_TAG: v1.21.0-git-alpine-3.8
+      # VARIANT_TAG_WITH_REF: v1.21.0-git-alpine-3.8-${GITHUB_REF}
+      VARIANT_BUILD_DIR: variants/v1.21.0-git-alpine-3.8
     steps:
     - uses: actions/checkout@v1
     - name: Display system info (linux)
@@ -162,12 +162,12 @@ jobs:
     - name: Clean-up
       run: docker logout
       if: always()
-  build-v1-21-0-beta-0-jq-alpine-3-8:
+  build-v1-21-0-jq-alpine-3-8:
     runs-on: ubuntu-18.04
     env:
-      VARIANT_TAG: v1.21.0-beta.0-jq-alpine-3.8
-      # VARIANT_TAG_WITH_REF: v1.21.0-beta.0-jq-alpine-3.8-${GITHUB_REF}
-      VARIANT_BUILD_DIR: variants/v1.21.0-beta.0-jq-alpine-3.8
+      VARIANT_TAG: v1.21.0-jq-alpine-3.8
+      # VARIANT_TAG_WITH_REF: v1.21.0-jq-alpine-3.8-${GITHUB_REF}
+      VARIANT_BUILD_DIR: variants/v1.21.0-jq-alpine-3.8
     steps:
     - uses: actions/checkout@v1
     - name: Display system info (linux)
@@ -213,12 +213,12 @@ jobs:
     - name: Clean-up
       run: docker logout
       if: always()
-  build-v1-21-0-beta-0-kustomize-alpine-3-8:
+  build-v1-21-0-kustomize-alpine-3-8:
     runs-on: ubuntu-18.04
     env:
-      VARIANT_TAG: v1.21.0-beta.0-kustomize-alpine-3.8
-      # VARIANT_TAG_WITH_REF: v1.21.0-beta.0-kustomize-alpine-3.8-${GITHUB_REF}
-      VARIANT_BUILD_DIR: variants/v1.21.0-beta.0-kustomize-alpine-3.8
+      VARIANT_TAG: v1.21.0-kustomize-alpine-3.8
+      # VARIANT_TAG_WITH_REF: v1.21.0-kustomize-alpine-3.8-${GITHUB_REF}
+      VARIANT_BUILD_DIR: variants/v1.21.0-kustomize-alpine-3.8
     steps:
     - uses: actions/checkout@v1
     - name: Display system info (linux)
@@ -264,12 +264,12 @@ jobs:
     - name: Clean-up
       run: docker logout
       if: always()
-  build-v1-21-0-beta-0-ssh-alpine-3-8:
+  build-v1-21-0-ssh-alpine-3-8:
     runs-on: ubuntu-18.04
     env:
-      VARIANT_TAG: v1.21.0-beta.0-ssh-alpine-3.8
-      # VARIANT_TAG_WITH_REF: v1.21.0-beta.0-ssh-alpine-3.8-${GITHUB_REF}
-      VARIANT_BUILD_DIR: variants/v1.21.0-beta.0-ssh-alpine-3.8
+      VARIANT_TAG: v1.21.0-ssh-alpine-3.8
+      # VARIANT_TAG_WITH_REF: v1.21.0-ssh-alpine-3.8-${GITHUB_REF}
+      VARIANT_BUILD_DIR: variants/v1.21.0-ssh-alpine-3.8
     steps:
     - uses: actions/checkout@v1
     - name: Display system info (linux)
@@ -315,12 +315,12 @@ jobs:
     - name: Clean-up
       run: docker logout
       if: always()
-  build-v1-21-0-beta-0-envsubst-git-jq-kustomize-ssh-alpine-3-8:
+  build-v1-21-0-envsubst-git-jq-kustomize-ssh-alpine-3-8:
     runs-on: ubuntu-18.04
     env:
-      VARIANT_TAG: v1.21.0-beta.0-envsubst-git-jq-kustomize-ssh-alpine-3.8
-      # VARIANT_TAG_WITH_REF: v1.21.0-beta.0-envsubst-git-jq-kustomize-ssh-alpine-3.8-${GITHUB_REF}
-      VARIANT_BUILD_DIR: variants/v1.21.0-beta.0-envsubst-git-jq-kustomize-ssh-alpine-3.8
+      VARIANT_TAG: v1.21.0-envsubst-git-jq-kustomize-ssh-alpine-3.8
+      # VARIANT_TAG_WITH_REF: v1.21.0-envsubst-git-jq-kustomize-ssh-alpine-3.8-${GITHUB_REF}
+      VARIANT_BUILD_DIR: variants/v1.21.0-envsubst-git-jq-kustomize-ssh-alpine-3.8
     steps:
     - uses: actions/checkout@v1
     - name: Display system info (linux)
@@ -2900,7 +2900,7 @@ jobs:
       - name: Print outputs
         run: echo ${{ steps.resolve-release-tag.outputs.TAG }}
   update-draft-release:
-    needs: [build-v1-21-0-beta-0-alpine-3-8, build-v1-21-0-beta-0-envsubst-alpine-3-8, build-v1-21-0-beta-0-git-alpine-3-8, build-v1-21-0-beta-0-jq-alpine-3-8, build-v1-21-0-beta-0-kustomize-alpine-3-8, build-v1-21-0-beta-0-ssh-alpine-3-8, build-v1-21-0-beta-0-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-20-4-alpine-3-8, build-v1-20-4-envsubst-alpine-3-8, build-v1-20-4-git-alpine-3-8, build-v1-20-4-jq-alpine-3-8, build-v1-20-4-kustomize-alpine-3-8, build-v1-20-4-ssh-alpine-3-8, build-v1-20-4-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-19-7-alpine-3-8, build-v1-19-7-envsubst-alpine-3-8, build-v1-19-7-git-alpine-3-8, build-v1-19-7-jq-alpine-3-8, build-v1-19-7-kustomize-alpine-3-8, build-v1-19-7-ssh-alpine-3-8, build-v1-19-7-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-18-15-alpine-3-8, build-v1-18-15-envsubst-alpine-3-8, build-v1-18-15-git-alpine-3-8, build-v1-18-15-jq-alpine-3-8, build-v1-18-15-kustomize-alpine-3-8, build-v1-18-15-ssh-alpine-3-8, build-v1-18-15-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-17-17-alpine-3-8, build-v1-17-17-envsubst-alpine-3-8, build-v1-17-17-git-alpine-3-8, build-v1-17-17-jq-alpine-3-8, build-v1-17-17-kustomize-alpine-3-8, build-v1-17-17-ssh-alpine-3-8, build-v1-17-17-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-16-15-alpine-3-8, build-v1-16-15-envsubst-alpine-3-8, build-v1-16-15-git-alpine-3-8, build-v1-16-15-jq-alpine-3-8, build-v1-16-15-kustomize-alpine-3-8, build-v1-16-15-ssh-alpine-3-8, build-v1-16-15-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-15-12-alpine-3-8, build-v1-15-12-envsubst-alpine-3-8, build-v1-15-12-git-alpine-3-8, build-v1-15-12-jq-alpine-3-8, build-v1-15-12-kustomize-alpine-3-8, build-v1-15-12-ssh-alpine-3-8, build-v1-15-12-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-14-10-alpine-3-8, build-v1-14-10-envsubst-alpine-3-8, build-v1-14-10-git-alpine-3-8, build-v1-14-10-jq-alpine-3-8, build-v1-14-10-kustomize-alpine-3-8, build-v1-14-10-ssh-alpine-3-8, build-v1-14-10-envsubst-git-jq-kustomize-ssh-alpine-3-8, resolve-release-tag]
+    needs: [build-v1-21-0-alpine-3-8, build-v1-21-0-envsubst-alpine-3-8, build-v1-21-0-git-alpine-3-8, build-v1-21-0-jq-alpine-3-8, build-v1-21-0-kustomize-alpine-3-8, build-v1-21-0-ssh-alpine-3-8, build-v1-21-0-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-20-4-alpine-3-8, build-v1-20-4-envsubst-alpine-3-8, build-v1-20-4-git-alpine-3-8, build-v1-20-4-jq-alpine-3-8, build-v1-20-4-kustomize-alpine-3-8, build-v1-20-4-ssh-alpine-3-8, build-v1-20-4-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-19-7-alpine-3-8, build-v1-19-7-envsubst-alpine-3-8, build-v1-19-7-git-alpine-3-8, build-v1-19-7-jq-alpine-3-8, build-v1-19-7-kustomize-alpine-3-8, build-v1-19-7-ssh-alpine-3-8, build-v1-19-7-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-18-15-alpine-3-8, build-v1-18-15-envsubst-alpine-3-8, build-v1-18-15-git-alpine-3-8, build-v1-18-15-jq-alpine-3-8, build-v1-18-15-kustomize-alpine-3-8, build-v1-18-15-ssh-alpine-3-8, build-v1-18-15-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-17-17-alpine-3-8, build-v1-17-17-envsubst-alpine-3-8, build-v1-17-17-git-alpine-3-8, build-v1-17-17-jq-alpine-3-8, build-v1-17-17-kustomize-alpine-3-8, build-v1-17-17-ssh-alpine-3-8, build-v1-17-17-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-16-15-alpine-3-8, build-v1-16-15-envsubst-alpine-3-8, build-v1-16-15-git-alpine-3-8, build-v1-16-15-jq-alpine-3-8, build-v1-16-15-kustomize-alpine-3-8, build-v1-16-15-ssh-alpine-3-8, build-v1-16-15-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-15-12-alpine-3-8, build-v1-15-12-envsubst-alpine-3-8, build-v1-15-12-git-alpine-3-8, build-v1-15-12-jq-alpine-3-8, build-v1-15-12-kustomize-alpine-3-8, build-v1-15-12-ssh-alpine-3-8, build-v1-15-12-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-14-10-alpine-3-8, build-v1-14-10-envsubst-alpine-3-8, build-v1-14-10-git-alpine-3-8, build-v1-14-10-jq-alpine-3-8, build-v1-14-10-kustomize-alpine-3-8, build-v1-14-10-ssh-alpine-3-8, build-v1-14-10-envsubst-git-jq-kustomize-ssh-alpine-3-8, resolve-release-tag]
     if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
