--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -6,12 +6,67 @@ on:
     - release
 
 jobs:
-  build-v1-21-0-beta-0-alpine-3-8:
+  build-v1-21-0-alpine-3-8:
     runs-on: ubuntu-18.04
     env:
-      VARIANT_TAG: v1.21.0-beta.0-alpine-3.8
-      # VARIANT_TAG_WITH_REF: v1.21.0-beta.0-alpine-3.8-${GITHUB_REF}
-      VARIANT_BUILD_DIR: variants/v1.21.0-beta.0-alpine-3.8
+      VARIANT_TAG: v1.21.0-alpine-3.8
+      # VARIANT_TAG_WITH_REF: v1.21.0-alpine-3.8-${GITHUB_REF}
+      VARIANT_BUILD_DIR: variants/v1.21.0-alpine-3.8
+    steps:
+    - uses: actions/checkout@v1
+    - name: Display system info (linux)
+      run: |
+        set -e
+        hostname
+        whoami
+        cat /etc/*release
+        lscpu
+        free
+        df -h
+        pwd
+        docker info
+        docker version
+    - name: Login to docker registry
+      run: echo "${DOCKERHUB_REGISTRY_PASSWORD}" | docker login -u "${DOCKERHUB_REGISTRY_USER}" --password-stdin
+      env:
+        DOCKERHUB_REGISTRY_USER: ${{ secrets.DOCKERHUB_REGISTRY_USER }}
+        DOCKERHUB_REGISTRY_PASSWORD: ${{ secrets.DOCKERHUB_REGISTRY_PASSWORD }}
+    - name: Build and push image
+      env:
+        DOCKERHUB_REGISTRY_USER: ${{ secrets.DOCKERHUB_REGISTRY_USER }}
+      run: |
+        set -e
+
+        # Get 'project-name' from 'namespace/project-name'
+        CI_PROJECT_NAME=$( echo "${GITHUB_REPOSITORY}" | rev | cut -d '/' -f 1 | rev )
+
+        # Get 'ref-name' from 'refs/heads/ref-name'
+        REF=$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )
+        SHA_SHORT=$( echo "${GITHUB_SHA}" | cut -c1-7 )
+
+        # Generate the final tags. E.g. 'release-v1.0.0-alpine' and 'release-b29758a-v1.0.0-alpine'
+        VARIANT_TAG_WITH_REF="${REF}-${VARIANT_TAG}"
+        VARIANT_TAG_WITH_REF_AND_SHA_SHORT="${REF}-${SHA_SHORT}-${VARIANT_TAG}"
+
+        docker build \
+          -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}" \
+          -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_REF}" \
+          -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_REF_AND_SHA_SHORT}" \
+          -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:latest" \
+          "${VARIANT_BUILD_DIR}"
+        docker push "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}"
+        docker push "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_REF}"
+        docker push "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_REF_AND_SHA_SHORT}"
+        docker push "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:latest"
+    - name: Clean-up
+      run: docker logout
+      if: always()
+  build-v1-21-0-envsubst-alpine-3-8:
+    runs-on: ubuntu-18.04
+    env:
+      VARIANT_TAG: v1.21.0-envsubst-alpine-3.8
+      # VARIANT_TAG_WITH_REF: v1.21.0-envsubst-alpine-3.8-${GITHUB_REF}
+      VARIANT_BUILD_DIR: variants/v1.21.0-envsubst-alpine-3.8
     steps:
     - uses: actions/checkout@v1
     - name: Display system info (linux)
@@ -59,12 +114,12 @@ jobs:
     - name: Clean-up
       run: docker logout
       if: always()
-  build-v1-21-0-beta-0-envsubst-alpine-3-8:
+  build-v1-21-0-git-alpine-3-8:
     runs-on: ubuntu-18.04
     env:
-      VARIANT_TAG: v1.21.0-beta.0-envsubst-alpine-3.8
-      # VARIANT_TAG_WITH_REF: v1.21.0-beta.0-envsubst-alpine-3.8-${GITHUB_REF}
-      VARIANT_BUILD_DIR: variants/v1.21.0-beta.0-envsubst-alpine-3.8
+      VARIANT_TAG: v1.21.0-git-alpine-3.8
+      # VARIANT_TAG_WITH_REF: v1.21.0-git-alpine-3.8-${GITHUB_REF}
+      VARIANT_BUILD_DIR: variants/v1.21.0-git-alpine-3.8
     steps:
     - uses: actions/checkout@v1
     - name: Display system info (linux)
@@ -112,12 +167,12 @@ jobs:
     - name: Clean-up
       run: docker logout
       if: always()
-  build-v1-21-0-beta-0-git-alpine-3-8:
+  build-v1-21-0-jq-alpine-3-8:
     runs-on: ubuntu-18.04
     env:
-      VARIANT_TAG: v1.21.0-beta.0-git-alpine-3.8
-      # VARIANT_TAG_WITH_REF: v1.21.0-beta.0-git-alpine-3.8-${GITHUB_REF}
-      VARIANT_BUILD_DIR: variants/v1.21.0-beta.0-git-alpine-3.8
+      VARIANT_TAG: v1.21.0-jq-alpine-3.8
+      # VARIANT_TAG_WITH_REF: v1.21.0-jq-alpine-3.8-${GITHUB_REF}
+      VARIANT_BUILD_DIR: variants/v1.21.0-jq-alpine-3.8
     steps:
     - uses: actions/checkout@v1
     - name: Display system info (linux)
@@ -165,12 +220,12 @@ jobs:
     - name: Clean-up
       run: docker logout
       if: always()
-  build-v1-21-0-beta-0-jq-alpine-3-8:
+  build-v1-21-0-kustomize-alpine-3-8:
     runs-on: ubuntu-18.04
     env:
-      VARIANT_TAG: v1.21.0-beta.0-jq-alpine-3.8
-      # VARIANT_TAG_WITH_REF: v1.21.0-beta.0-jq-alpine-3.8-${GITHUB_REF}
-      VARIANT_BUILD_DIR: variants/v1.21.0-beta.0-jq-alpine-3.8
+      VARIANT_TAG: v1.21.0-kustomize-alpine-3.8
+      # VARIANT_TAG_WITH_REF: v1.21.0-kustomize-alpine-3.8-${GITHUB_REF}
+      VARIANT_BUILD_DIR: variants/v1.21.0-kustomize-alpine-3.8
     steps:
     - uses: actions/checkout@v1
     - name: Display system info (linux)
@@ -218,12 +273,12 @@ jobs:
     - name: Clean-up
       run: docker logout
       if: always()
-  build-v1-21-0-beta-0-kustomize-alpine-3-8:
+  build-v1-21-0-ssh-alpine-3-8:
     runs-on: ubuntu-18.04
     env:
-      VARIANT_TAG: v1.21.0-beta.0-kustomize-alpine-3.8
-      # VARIANT_TAG_WITH_REF: v1.21.0-beta.0-kustomize-alpine-3.8-${GITHUB_REF}
-      VARIANT_BUILD_DIR: variants/v1.21.0-beta.0-kustomize-alpine-3.8
+      VARIANT_TAG: v1.21.0-ssh-alpine-3.8
+      # VARIANT_TAG_WITH_REF: v1.21.0-ssh-alpine-3.8-${GITHUB_REF}
+      VARIANT_BUILD_DIR: variants/v1.21.0-ssh-alpine-3.8
     steps:
     - uses: actions/checkout@v1
     - name: Display system info (linux)
@@ -271,65 +326,12 @@ jobs:
     - name: Clean-up
       run: docker logout
       if: always()
-  build-v1-21-0-beta-0-ssh-alpine-3-8:
+  build-v1-21-0-envsubst-git-jq-kustomize-ssh-alpine-3-8:
     runs-on: ubuntu-18.04
     env:
-      VARIANT_TAG: v1.21.0-beta.0-ssh-alpine-3.8
-      # VARIANT_TAG_WITH_REF: v1.21.0-beta.0-ssh-alpine-3.8-${GITHUB_REF}
-      VARIANT_BUILD_DIR: variants/v1.21.0-beta.0-ssh-alpine-3.8
-    steps:
-    - uses: actions/checkout@v1
-    - name: Display system info (linux)
-      run: |
-        set -e
-        hostname
-        whoami
-        cat /etc/*release
-        lscpu
-        free
-        df -h
-        pwd
-        docker info
-        docker version
-    - name: Login to docker registry
-      run: echo "${DOCKERHUB_REGISTRY_PASSWORD}" | docker login -u "${DOCKERHUB_REGISTRY_USER}" --password-stdin
-      env:
-        DOCKERHUB_REGISTRY_USER: ${{ secrets.DOCKERHUB_REGISTRY_USER }}
-        DOCKERHUB_REGISTRY_PASSWORD: ${{ secrets.DOCKERHUB_REGISTRY_PASSWORD }}
-    - name: Build and push image
-      env:
-        DOCKERHUB_REGISTRY_USER: ${{ secrets.DOCKERHUB_REGISTRY_USER }}
-      run: |
-        set -e
-
-        # Get 'project-name' from 'namespace/project-name'
-        CI_PROJECT_NAME=$( echo "${GITHUB_REPOSITORY}" | rev | cut -d '/' -f 1 | rev )
-
-        # Get 'ref-name' from 'refs/heads/ref-name'
-        REF=$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )
-        SHA_SHORT=$( echo "${GITHUB_SHA}" | cut -c1-7 )
-
-        # Generate the final tags. E.g. 'release-v1.0.0-alpine' and 'release-b29758a-v1.0.0-alpine'
-        VARIANT_TAG_WITH_REF="${REF}-${VARIANT_TAG}"
-        VARIANT_TAG_WITH_REF_AND_SHA_SHORT="${REF}-${SHA_SHORT}-${VARIANT_TAG}"
-
-        docker build \
-          -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}" \
-          -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_REF}" \
-          -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_REF_AND_SHA_SHORT}" \
-          "${VARIANT_BUILD_DIR}"
-        docker push "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}"
-        docker push "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_REF}"
-        docker push "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_REF_AND_SHA_SHORT}"
-    - name: Clean-up
-      run: docker logout
-      if: always()
-  build-v1-21-0-beta-0-envsubst-git-jq-kustomize-ssh-alpine-3-8:
-    runs-on: ubuntu-18.04
-    env:
-      VARIANT_TAG: v1.21.0-beta.0-envsubst-git-jq-kustomize-ssh-alpine-3.8
-      # VARIANT_TAG_WITH_REF: v1.21.0-beta.0-envsubst-git-jq-kustomize-ssh-alpine-3.8-${GITHUB_REF}
-      VARIANT_BUILD_DIR: variants/v1.21.0-beta.0-envsubst-git-jq-kustomize-ssh-alpine-3.8
+      VARIANT_TAG: v1.21.0-envsubst-git-jq-kustomize-ssh-alpine-3.8
+      # VARIANT_TAG_WITH_REF: v1.21.0-envsubst-git-jq-kustomize-ssh-alpine-3.8-${GITHUB_REF}
+      VARIANT_BUILD_DIR: variants/v1.21.0-envsubst-git-jq-kustomize-ssh-alpine-3.8
     steps:
     - uses: actions/checkout@v1
     - name: Display system info (linux)
@@ -423,12 +425,10 @@ jobs:
           -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}" \
           -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_REF}" \
           -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_REF_AND_SHA_SHORT}" \
-          -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:latest" \
           "${VARIANT_BUILD_DIR}"
         docker push "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}"
         docker push "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_REF}"
         docker push "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_REF_AND_SHA_SHORT}"
-        docker push "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:latest"
     - name: Clean-up
       run: docker logout
       if: always()
@@ -2977,7 +2977,7 @@ jobs:
       run: docker logout
       if: always()
   converge-master-and-release-branches:
-    needs: [build-v1-21-0-beta-0-alpine-3-8, build-v1-21-0-beta-0-envsubst-alpine-3-8, build-v1-21-0-beta-0-git-alpine-3-8, build-v1-21-0-beta-0-jq-alpine-3-8, build-v1-21-0-beta-0-kustomize-alpine-3-8, build-v1-21-0-beta-0-ssh-alpine-3-8, build-v1-21-0-beta-0-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-20-4-alpine-3-8, build-v1-20-4-envsubst-alpine-3-8, build-v1-20-4-git-alpine-3-8, build-v1-20-4-jq-alpine-3-8, build-v1-20-4-kustomize-alpine-3-8, build-v1-20-4-ssh-alpine-3-8, build-v1-20-4-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-19-7-alpine-3-8, build-v1-19-7-envsubst-alpine-3-8, build-v1-19-7-git-alpine-3-8, build-v1-19-7-jq-alpine-3-8, build-v1-19-7-kustomize-alpine-3-8, build-v1-19-7-ssh-alpine-3-8, build-v1-19-7-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-18-15-alpine-3-8, build-v1-18-15-envsubst-alpine-3-8, build-v1-18-15-git-alpine-3-8, build-v1-18-15-jq-alpine-3-8, build-v1-18-15-kustomize-alpine-3-8, build-v1-18-15-ssh-alpine-3-8, build-v1-18-15-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-17-17-alpine-3-8, build-v1-17-17-envsubst-alpine-3-8, build-v1-17-17-git-alpine-3-8, build-v1-17-17-jq-alpine-3-8, build-v1-17-17-kustomize-alpine-3-8, build-v1-17-17-ssh-alpine-3-8, build-v1-17-17-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-16-15-alpine-3-8, build-v1-16-15-envsubst-alpine-3-8, build-v1-16-15-git-alpine-3-8, build-v1-16-15-jq-alpine-3-8, build-v1-16-15-kustomize-alpine-3-8, build-v1-16-15-ssh-alpine-3-8, build-v1-16-15-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-15-12-alpine-3-8, build-v1-15-12-envsubst-alpine-3-8, build-v1-15-12-git-alpine-3-8, build-v1-15-12-jq-alpine-3-8, build-v1-15-12-kustomize-alpine-3-8, build-v1-15-12-ssh-alpine-3-8, build-v1-15-12-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-14-10-alpine-3-8, build-v1-14-10-envsubst-alpine-3-8, build-v1-14-10-git-alpine-3-8, build-v1-14-10-jq-alpine-3-8, build-v1-14-10-kustomize-alpine-3-8, build-v1-14-10-ssh-alpine-3-8, build-v1-14-10-envsubst-git-jq-kustomize-ssh-alpine-3-8]
+    needs: [build-v1-21-0-alpine-3-8, build-v1-21-0-envsubst-alpine-3-8, build-v1-21-0-git-alpine-3-8, build-v1-21-0-jq-alpine-3-8, build-v1-21-0-kustomize-alpine-3-8, build-v1-21-0-ssh-alpine-3-8, build-v1-21-0-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-20-4-alpine-3-8, build-v1-20-4-envsubst-alpine-3-8, build-v1-20-4-git-alpine-3-8, build-v1-20-4-jq-alpine-3-8, build-v1-20-4-kustomize-alpine-3-8, build-v1-20-4-ssh-alpine-3-8, build-v1-20-4-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-19-7-alpine-3-8, build-v1-19-7-envsubst-alpine-3-8, build-v1-19-7-git-alpine-3-8, build-v1-19-7-jq-alpine-3-8, build-v1-19-7-kustomize-alpine-3-8, build-v1-19-7-ssh-alpine-3-8, build-v1-19-7-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-18-15-alpine-3-8, build-v1-18-15-envsubst-alpine-3-8, build-v1-18-15-git-alpine-3-8, build-v1-18-15-jq-alpine-3-8, build-v1-18-15-kustomize-alpine-3-8, build-v1-18-15-ssh-alpine-3-8, build-v1-18-15-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-17-17-alpine-3-8, build-v1-17-17-envsubst-alpine-3-8, build-v1-17-17-git-alpine-3-8, build-v1-17-17-jq-alpine-3-8, build-v1-17-17-kustomize-alpine-3-8, build-v1-17-17-ssh-alpine-3-8, build-v1-17-17-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-16-15-alpine-3-8, build-v1-16-15-envsubst-alpine-3-8, build-v1-16-15-git-alpine-3-8, build-v1-16-15-jq-alpine-3-8, build-v1-16-15-kustomize-alpine-3-8, build-v1-16-15-ssh-alpine-3-8, build-v1-16-15-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-15-12-alpine-3-8, build-v1-15-12-envsubst-alpine-3-8, build-v1-15-12-git-alpine-3-8, build-v1-15-12-jq-alpine-3-8, build-v1-15-12-kustomize-alpine-3-8, build-v1-15-12-ssh-alpine-3-8, build-v1-15-12-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-14-10-alpine-3-8, build-v1-14-10-envsubst-alpine-3-8, build-v1-14-10-git-alpine-3-8, build-v1-14-10-jq-alpine-3-8, build-v1-14-10-kustomize-alpine-3-8, build-v1-14-10-ssh-alpine-3-8, build-v1-14-10-envsubst-git-jq-kustomize-ssh-alpine-3-8]
     if: github.ref == 'refs/heads/release'
     runs-on: ubuntu-latest
     steps:
@@ -3024,7 +3024,7 @@ jobs:
       - name: Print outputs
         run: echo ${{ steps.resolve-release-tag.outputs.TAG }}
   publish-draft-release:
-    needs: [build-v1-21-0-beta-0-alpine-3-8, build-v1-21-0-beta-0-envsubst-alpine-3-8, build-v1-21-0-beta-0-git-alpine-3-8, build-v1-21-0-beta-0-jq-alpine-3-8, build-v1-21-0-beta-0-kustomize-alpine-3-8, build-v1-21-0-beta-0-ssh-alpine-3-8, build-v1-21-0-beta-0-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-20-4-alpine-3-8, build-v1-20-4-envsubst-alpine-3-8, build-v1-20-4-git-alpine-3-8, build-v1-20-4-jq-alpine-3-8, build-v1-20-4-kustomize-alpine-3-8, build-v1-20-4-ssh-alpine-3-8, build-v1-20-4-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-19-7-alpine-3-8, build-v1-19-7-envsubst-alpine-3-8, build-v1-19-7-git-alpine-3-8, build-v1-19-7-jq-alpine-3-8, build-v1-19-7-kustomize-alpine-3-8, build-v1-19-7-ssh-alpine-3-8, build-v1-19-7-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-18-15-alpine-3-8, build-v1-18-15-envsubst-alpine-3-8, build-v1-18-15-git-alpine-3-8, build-v1-18-15-jq-alpine-3-8, build-v1-18-15-kustomize-alpine-3-8, build-v1-18-15-ssh-alpine-3-8, build-v1-18-15-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-17-17-alpine-3-8, build-v1-17-17-envsubst-alpine-3-8, build-v1-17-17-git-alpine-3-8, build-v1-17-17-jq-alpine-3-8, build-v1-17-17-kustomize-alpine-3-8, build-v1-17-17-ssh-alpine-3-8, build-v1-17-17-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-16-15-alpine-3-8, build-v1-16-15-envsubst-alpine-3-8, build-v1-16-15-git-alpine-3-8, build-v1-16-15-jq-alpine-3-8, build-v1-16-15-kustomize-alpine-3-8, build-v1-16-15-ssh-alpine-3-8, build-v1-16-15-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-15-12-alpine-3-8, build-v1-15-12-envsubst-alpine-3-8, build-v1-15-12-git-alpine-3-8, build-v1-15-12-jq-alpine-3-8, build-v1-15-12-kustomize-alpine-3-8, build-v1-15-12-ssh-alpine-3-8, build-v1-15-12-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-14-10-alpine-3-8, build-v1-14-10-envsubst-alpine-3-8, build-v1-14-10-git-alpine-3-8, build-v1-14-10-jq-alpine-3-8, build-v1-14-10-kustomize-alpine-3-8, build-v1-14-10-ssh-alpine-3-8, build-v1-14-10-envsubst-git-jq-kustomize-ssh-alpine-3-8, converge-master-and-release-branches]
+    needs: [build-v1-21-0-alpine-3-8, build-v1-21-0-envsubst-alpine-3-8, build-v1-21-0-git-alpine-3-8, build-v1-21-0-jq-alpine-3-8, build-v1-21-0-kustomize-alpine-3-8, build-v1-21-0-ssh-alpine-3-8, build-v1-21-0-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-20-4-alpine-3-8, build-v1-20-4-envsubst-alpine-3-8, build-v1-20-4-git-alpine-3-8, build-v1-20-4-jq-alpine-3-8, build-v1-20-4-kustomize-alpine-3-8, build-v1-20-4-ssh-alpine-3-8, build-v1-20-4-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-19-7-alpine-3-8, build-v1-19-7-envsubst-alpine-3-8, build-v1-19-7-git-alpine-3-8, build-v1-19-7-jq-alpine-3-8, build-v1-19-7-kustomize-alpine-3-8, build-v1-19-7-ssh-alpine-3-8, build-v1-19-7-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-18-15-alpine-3-8, build-v1-18-15-envsubst-alpine-3-8, build-v1-18-15-git-alpine-3-8, build-v1-18-15-jq-alpine-3-8, build-v1-18-15-kustomize-alpine-3-8, build-v1-18-15-ssh-alpine-3-8, build-v1-18-15-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-17-17-alpine-3-8, build-v1-17-17-envsubst-alpine-3-8, build-v1-17-17-git-alpine-3-8, build-v1-17-17-jq-alpine-3-8, build-v1-17-17-kustomize-alpine-3-8, build-v1-17-17-ssh-alpine-3-8, build-v1-17-17-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-16-15-alpine-3-8, build-v1-16-15-envsubst-alpine-3-8, build-v1-16-15-git-alpine-3-8, build-v1-16-15-jq-alpine-3-8, build-v1-16-15-kustomize-alpine-3-8, build-v1-16-15-ssh-alpine-3-8, build-v1-16-15-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-15-12-alpine-3-8, build-v1-15-12-envsubst-alpine-3-8, build-v1-15-12-git-alpine-3-8, build-v1-15-12-jq-alpine-3-8, build-v1-15-12-kustomize-alpine-3-8, build-v1-15-12-ssh-alpine-3-8, build-v1-15-12-envsubst-git-jq-kustomize-ssh-alpine-3-8, build-v1-14-10-alpine-3-8, build-v1-14-10-envsubst-alpine-3-8, build-v1-14-10-git-alpine-3-8, build-v1-14-10-jq-alpine-3-8, build-v1-14-10-kustomize-alpine-3-8, build-v1-14-10-ssh-alpine-3-8, build-v1-14-10-envsubst-git-jq-kustomize-ssh-alpine-3-8, converge-master-and-release-branches]
     if: github.ref == 'refs/heads/release'
     runs-on: ubuntu-latest
     steps:
